@@ -211,6 +211,12 @@ html.grabbing * {
 .c3.butterfly .navigatable .node rect {
   cursor: pointer;
 }
+.c3.butterfly .link path.fade_right {
+  mask: url(#mask_fade_right);
+}
+.c3.butterfly .link path.fade_left {
+  mask: url(#mask_fade_left);
+}
 table.c3.table {
   border-collapse: collapse;
 }
