@@ -305,6 +305,16 @@ html.grabbing, html.grabbing * {
             cursor: pointer;
         }
     }
+
+    .link path {
+      &.fade_right {
+        mask: url(#mask_fade_right);
+      }
+
+      &.fade_left {
+        mask: url(#mask_fade_left);
+      }
+    }
 }
 
 
