@@ -244,6 +244,7 @@ require('q3/css/c3.css');
                 Notably, IE does not support canvas swimlanes embedded in an SVG chart,
                 vector scaling for zoomable line charts, and
                 placement of labels in the center of scatter plot circles.
+                Firefox appears to have some issues with SVG gradient masks.
             </p>
             <p>
                 Also, please note that by default some IT departments set a policy which defaults IE to an old
